# fakelinux-rp2040

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
